use default port if not specified in URL